--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="style.css" type="text/css">
 
-  <title>Nonogram</title>
+  <title>Press Try It for start Nonogram</title>
 </head>
 
 <body>
