--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <link rel="stylesheet" href="style.css" type="text/css">
 
-  <title>Press Try It for start Nonogram</title>
+  <title>Nonogram</title>
 </head>
 
 <body>
-  <h2>Nonogram</h2>
+  <h2>Press Try It for start Nonogram</h2>
   <table id="t01">
     <tr>
       <th>#</th>
