--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h2>Press Try It for start Nonogram</h2>
+  <h2>Press Try to for start Nonogram</h2>
   <table id="t01">
     <tr>
       <th>#</th>
